feat: apply Riccardo suggestion